# calamineR

./: .Rbuildignore  .gitignore  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  benchmark.R  configure  configure.win  cran-comments.md
.github/workflows/: R-CMD-check.yaml
R/: calamine.R  extendr-wrappers.R
inst/: AUTHORS  WORDLIST
inst/extdata/: test_merged.xlsb  test_merged.xlsx
man/: cal_merge_regions.Rd  cal_read_sheet_df.Rd  calamineR-package.Rd  calaminer-package.Rd  excel_sheets.Rd  merge_regions.Rd  read_excel.Rd  read_sheet_raw.Rd  sheet_dims.Rd
src/: Makevars  Makevars.win  entrypoint.c  symbols.rds
src/rust/: Cargo.toml  vendor-authors.R  vendor-packages.sh  vendor.tar.xz
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-read.R  test-validation.R
