[package]
name = "calamine-r"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["staticlib"]
name = "calamine_r"

[dependencies]
extendr-api = "0.7"
calamine = "0.24"
zip = { version = "0.6", features = ["deflate"], default-features = false }

[profile.release]
lto = true
panic = "unwind"
strip = "symbols"
opt-level = 3
codegen-units = 1
